--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js practice</title>
-    <link rel = "stylesheet" type = "text/css" href="design.css"/>
+    <link rel="stylesheet" type="text/css" href="design.css" />
+    <script src="timer.js"></script>
 </head>
 
 <body>
-    <div id = "div1"></div>
-    <script>
-        let arr = [2,10,100,1,20,200];
-        arr.sort(
-        function(n1, n2){return n1-n2;});
-        alert(arr);
-    </script>
+    <div id="div1"></div>
 </body>
 
 </html>
