--- a/sort/index.html
+++ b/sort/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js practice</title>
     <link rel="stylesheet" type="text/css" href="design.css" />
-    <script src="timer.js"></script>
+    <script src="sort.js"></script>
 </head>
 
 <body>
